<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/settings" style="@style/Style.Black">
    <TextClock android:id="@+id/settings_clock" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2" style="@style/Style.Clock.AppDrawer"/>
    <ImageView android:id="@+id/settingsIconImageView" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Style.PageIcon.Settings"/>
    <android.support.constraint.Guideline android:id="@+id/guideline1" app:layout_constraintGuide_percent="0.1" style="@style/Guideline"/>
    <android.support.constraint.Guideline android:id="@+id/guideline3" app:layout_constraintGuide_percent="0.3" style="@style/Guideline"/>
    <android.support.constraint.Guideline android:id="@+id/guideline5" app:layout_constraintGuide_percent="0.5" style="@style/Guideline"/>
    <android.support.constraint.Guideline android:id="@+id/guideline7" app:layout_constraintGuide_percent="0.7" style="@style/Guideline"/>
    <android.support.constraint.Guideline android:id="@+id/guideline9" app:layout_constraintGuide_percent="0.9" style="@style/Guideline"/>
    <ImageView android:id="@+id/wifiStatusIcon" android:src="@drawable/wifi_level_list" android:contentDescription="@string/wifi_state_indicator" app:layout_constraintBottom_toTopOf="@+id/wifiStatusDescription" app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline1" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2" style="@style/ImageViewStyle.SummaryIcon"/>
    <ImageView android:id="@+id/batteryStatusIcon" android:src="@drawable/battery_level_list" android:contentDescription="@string/battery_state_indicator" app:layout_constraintBottom_toTopOf="@+id/batteryStatusDescription" app:layout_constraintEnd_toStartOf="@+id/guideline5" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2" style="@style/ImageViewStyle.SummaryIcon"/>
    <ImageView android:id="@+id/bluetoothStatusIcon" android:src="@drawable/bluetooth_level_list" android:contentDescription="@string/bluetooth_state_indicator" app:layout_constraintBottom_toTopOf="@+id/bluetoothStatusDescription" app:layout_constraintEnd_toStartOf="@+id/guideline7" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline5" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2" style="@style/ImageViewStyle.SummaryIcon"/>
    <ImageView android:id="@+id/volumeStatusIcon" android:src="@drawable/volume_level_list" android:contentDescription="@string/volume_state_indicator" app:layout_constraintBottom_toTopOf="@+id/volumeStatusDescription" app:layout_constraintEnd_toStartOf="@+id/guideline9" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline7" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2" style="@style/ImageViewStyle.SummaryIcon"/>
    <TextView android:id="@+id/wifiStatusDescription" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline1" app:layout_constraintTop_toBottomOf="@+id/wifiStatusIcon" app:layout_constraintVertical_chainStyle="2" style="@style/TextStyle.Indicator"/>
    <TextView android:id="@+id/batteryStatusDescription" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/guideline5" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintTop_toBottomOf="@+id/batteryStatusIcon" app:layout_constraintVertical_chainStyle="2" style="@style/TextStyle.Indicator"/>
    <TextView android:id="@+id/bluetoothStatusDescription" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/guideline7" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline5" app:layout_constraintTop_toBottomOf="@+id/bluetoothStatusIcon" app:layout_constraintVertical_chainStyle="2" style="@style/TextStyle.Indicator"/>
    <TextView android:id="@+id/volumeStatusDescription" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/guideline9" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/guideline7" app:layout_constraintTop_toBottomOf="@+id/volumeStatusIcon" app:layout_constraintVertical_chainStyle="2" style="@style/TextStyle.Indicator"/>
</android.support.constraint.ConstraintLayout>
